# hummingbird

./: .gitignore  CMakeLists.txt  README.md  build.sh  readme.md  teste1.py
alexnet/: CMakeLists.txt  alexnet.cpp
config/convert/: alexnet_wts.json  example.json  yolov5s.json  yolov5s_fp16.json  yolov5s_mob.json  yolov5s_prune.json
config/deploy/: alexnet.json  alexnet_wts.json  example.json  squeezenet_ncnn.json  yolov5s.json  yolov5s_fp16.json  yolov5s_mob.json  yolov5s_ort.json  yolov5s_prune.json
convert/: base_postprocess.py  base_preprocess.py  const.py  deploy.py  pytorch2ir.py  visual.py
convert/backend/: __init__.py  backend_factory.py  base_backend.py
convert/backend/trt/: __init__.py  common.py  onnx2tensorrt.py  tensorrt_wrapper.py  wts2tensorrt.py
convert/backend/trt/model/: __init__.py  alexnet.py  base_model.py
deploy/: CMakeLists.txt
deploy/backend/: backend_interface.h  ncnn_wrapper.cpp  ncnn_wrapper.h  ort_wrapper.cpp  ort_wrapper.h  tensorrt_wrapper.cpp  tensorrt_wrapper.h
deploy/demo/: test.cpp  test1.cpp  test3.cpp  test4.cpp
deploy/postprocess/: classify_wrapper.cpp  classify_wrapper.h  postprocess_interface.h  yolov5OrtPostprocess_wrapper.cpp  yolov5OrtPostprocess_wrapper.h  yolov5Postprocess_wrapper.cpp  yolov5Postprocess_wrapper.h
deploy/preprocess/: normalize_wrapper.cpp  normalize_wrapper.h  preprocess_interface.h  resize_wrapper.cpp  resize_wrapper.h  yolov5OrtPreprocess_wrapper.cpp  yolov5OrtPreprocess_wrapper.h  yolov5Preprocess_wrapper.cpp  yolov5Preprocess_wrapper.h
deploy/service/: create_interface.h  pipeline.cpp  pipeline.h  visual_tools.cpp  visual_tools.h
deploy/utils/: factory.cpp  factory.h  params_define.h  register.cpp  register.h
hummingbird/backend/base/: __init__.py  backend_wrapper_registry.py  base_wrapper.py
hummingbird/backend/ncnn/: __init__.py  init_plugins.py  torchscript2ncnn.py  wrapper.py
hummingbird/base/: registry.py
hummingbird/codebase/base/: backend_interence.py
hummingbird/utils/: __init__.py  config_utils.py  constants.py  logging.py  registry.py  timer.py  utils.py
test/: test1.py
third/jsoncpp-src-0.5.0/buildscons/linux-gcc-5.4.0/: .sconsign.dbm.dblite
third/jsoncpp-src-0.5.0/buildscons/linux-gcc-5.4.0/src/jsontestrunner/: jsontestrunner
third/jsoncpp-src-0.5.0/buildscons/linux-gcc-5.4.0/src/lib_json/: json_reader.os  json_value.os  json_writer.os
tools/: deploy.py
